# strmanip

./: .gitignore  CMakeLists.txt
exe/: strmanip.rar  strmanip_build_exe.rar  strmanip_exe.rar
src/: Engine.h  main.cpp
src/Abstractions/: I_Config.h  I_KeyBinderExecutor.h  I_Logger.h  I_StringManipulator.h  I_StringProvider.h  I_Translator.h
src/CLI/: CliContext.h  CommandsAndArgs.h
src/CLI/Commands/: CliCommand.h  ConfigureCommand.h  HelpCommand.h  InteraptableCliCommand.h  ListBindingsCommand.h  ListKeysCommand.h  ListLanguagesCommand.h  RunCommand.h  SetManipCfgCommand.h  SetTransCfgCommand.h
src/CLI/Pairs/: CliBoolPair.h  CliLanguagePair.h  CliPair.h  CliPairBase.h  CliStringPair.h  CliVectorOfKeyPair.h
src/Configurations/: ConfigIO.h  GlobalConfig.h  ManipulatorConfig.h  TranslatorConfig.h
src/Enums/: CommandArgType.h  CommandType.h  Key.h  Language.h
src/Loggers/: FileLogger.h
src/Manipulators/: CapitalizeStringManipulator.h  LowerStringManipulator.h  TranslitStringManipulator.h  UpperStringManipulator.h
src/Providers/: ClipboardStringProvider.h  CustomKeyBinderExecutor.h  StopSignal.h  WindowsKeyBinderExecutor.h
src/Translators/: DeepLTranslator.h
src/Utils/: Encoding.h  Util.h
